tests-integration/fixtures/checking/168_derive_ord_1/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
Id :: forall (a :: Type). (a :: Type) -> Id (a :: Type)
Wrap ::
  forall (t5 :: Type) (f :: (t5 :: Type) -> Type) (a :: (t5 :: Type)).
    (f :: (t5 :: Type) -> Type) (a :: (t5 :: Type)) ->
    Wrap @(t5 :: Type) (f :: (t5 :: Type) -> Type) (a :: (t5 :: Type))
Compose ::
  forall (t12 :: Type) (t16 :: Type) (f :: (t12 :: Type) -> Type)
    (g :: (t16 :: Type) -> (t12 :: Type)) (a :: (t16 :: Type)).
    (f :: (t12 :: Type) -> Type) ((g :: (t16 :: Type) -> (t12 :: Type)) (a :: (t16 :: Type))) ->
    Compose @(t16 :: Type)
      (f :: (t12 :: Type) -> Type)
      (g :: (t16 :: Type) -> (t12 :: Type))
      (a :: (t16 :: Type))
NoOrd :: forall (a :: Type). (a :: Type) -> NoOrd (a :: Type)

Types
Id :: Type -> Type
Wrap :: forall (t5 :: Type). ((t5 :: Type) -> Type) -> (t5 :: Type) -> Type
Compose ::
  forall (t12 :: Type) (t16 :: Type).
    ((t12 :: Type) -> Type) -> ((t16 :: Type) -> (t12 :: Type)) -> (t16 :: Type) -> Type
NoOrd :: Type -> Type

Data
Id
  Quantified = :0
  Kind = :0

Wrap
  Quantified = :1
  Kind = :0

Compose
  Quantified = :2
  Kind = :0

NoOrd
  Quantified = :0
  Kind = :0


Roles
Id = [Representational]
Wrap = [Representational, Nominal]
Compose = [Representational, Representational, Nominal]
NoOrd = [Representational]

Derived
derive forall (t40 :: Type). (Eq1 (f :: Type -> Type), Eq ((g :: (t40 :: Type) -> Type) (a :: (t40 :: Type)))) => Eq (Compose @Type @(t40 :: Type) (f :: Type -> Type) (g :: (t40 :: Type) -> Type) (a :: (t40 :: Type)) :: Type)
derive forall (t48 :: Type). (Ord1 (f :: Type -> Type), Ord ((g :: (t48 :: Type) -> Type) (a :: (t48 :: Type)))) => Ord (Compose @Type @(t48 :: Type) (f :: Type -> Type) (g :: (t48 :: Type) -> Type) (a :: (t48 :: Type)) :: Type)
derive Eq1 (f :: Type -> Type) => Eq1 (Compose @Type @Type (f :: Type -> Type) (g :: Type -> Type) :: Type -> Type)
derive Ord1 (f :: Type -> Type) => Ord1 (Compose @Type @Type (f :: Type -> Type) (g :: Type -> Type) :: Type -> Type)
derive Eq (a :: Type) => Eq (NoOrd (a :: Type) :: Type)
derive Eq1 (NoOrd :: Type -> Type)
derive Ord1 (NoOrd :: Type -> Type)
derive Eq (a :: Type) => Eq (Id (a :: Type) :: Type)
derive Eq1 (Id :: Type -> Type)
derive Ord (a :: Type) => Ord (Id (a :: Type) :: Type)
derive Ord1 (Id :: Type -> Type)
derive (Eq1 (f :: Type -> Type), Eq (a :: Type)) => Eq (Wrap @Type (f :: Type -> Type) (a :: Type) :: Type)
derive Eq1 (f :: Type -> Type) => Eq1 (Wrap @Type (f :: Type -> Type) :: Type -> Type)
derive (Ord1 (f :: Type -> Type), Ord (a :: Type)) => Ord (Wrap @Type (f :: Type -> Type) (a :: Type) :: Type)
derive Ord1 (f :: Type -> Type) => Ord1 (Wrap @Type (f :: Type -> Type) :: Type -> Type)

Diagnostics
error[NoInstanceFound]: No instance found for: Eq ((g :: Type -> Type) (~_ :: Type))
  --> 26:1..26:43
   |
26 | derive instance Eq1 f => Eq1 (Compose f g)
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Ord ((g :: Type -> Type) (~_ :: Type))
  --> 27:1..27:45
   |
27 | derive instance Ord1 f => Ord1 (Compose f g)
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Ord (NoOrd (~_ :: Type))
  --> 34:1..34:27
   |
34 | derive instance Ord1 NoOrd
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~
